--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -57,6 +57,17 @@ services:
     ports:
       - "3000:3000"
 
+  # jenkins:
+  #   image: jenkins/jenkins:lts
+  #   user: root
+  #   ports:
+  #     - "8080:8080"
+  #   volumes:
+  #     - jenkins_home:/var/jenkins_home
+  #     - /var/run/docker.sock:/var/run/docker.sock
+
+
 volumes:
   db_tenant1:
   db_tenant2:
+  # jenkins_home:
