--- a/wp-saas-platform/nginx/default.conf
+++ b/wp-saas-platform/nginx/default.conf
@@ -17,3 +17,21 @@ server {
         proxy_set_header Host $host;
     }
 }
+
+server {
+    listen 80;
+    server_name grafana.local;
+
+    location / {
+        proxy_pass http://grafana:3000;
+    }
+}
+
+server {
+    listen 80;
+    server_name prometheus.local;
+
+    location / {
+        proxy_pass http://prometheus:9090;
+    }
+}
