--- a/wp-saas-platform/nginx/default.conf
+++ b/wp-saas-platform/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name tenant1.local;
+    server_name tenant1.madsavanna.store;
 
     location / {
         proxy_pass http://wp_tenant1;
@@ -10,7 +10,7 @@ server {
 
 server {
     listen 80;
-    server_name tenant2.local;
+    server_name tenant2.madsavanna.store;
 
     location / {
         proxy_pass http://wp_tenant2;
@@ -18,20 +18,20 @@ server {
     }
 }
 
-server {
-    listen 80;
-    server_name grafana.local;
+# server {
+#     listen 80;
+#     server_name grafana.local;
 
-    location / {
-        proxy_pass http://grafana:3000;
-    }
-}
+#     location / {
+#         proxy_pass http://grafana:3000;
+#     }
+# }
 
-server {
-    listen 80;
-    server_name prometheus.local;
+# server {
+#     listen 80;
+#     server_name prometheus.local;
 
-    location / {
-        proxy_pass http://prometheus:9090;
-    }
-}
+#     location / {
+#         proxy_pass http://prometheus:9090;
+#     }
+# }
