added nginx metrics

--- a/wp-saas-platform/nginx/default.conf
+++ b/wp-saas-platform/nginx/default.conf
@@ -16,6 +16,12 @@ server {
         proxy_pass http://wp_tenant2;
         proxy_set_header Host $host;
     }
+
+    location /stub_status {
+        stub_status;
+        allow 127.0.0.1;
+        allow all;
+    }
 }
 
 # server {
