--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -66,6 +66,14 @@ services:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
 
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter
+    command:
+      - -nginx.scrape-uri=http://nginx/stub_status
+    depends_on:
+      - nginx
+
+
 
 volumes:
   db_tenant1:
