--- a/wp-saas-platform/monitoring/prometheus.yml
+++ b/wp-saas-platform/monitoring/prometheus.yml
@@ -5,3 +5,7 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["prometheus:9090"]
+
+  - job_name: "nginx"
+    static_configs:
+      - targets: ["nginx-exporter:9113"]
