--- a/wp-saas-platform/nginx/default.conf
+++ b/wp-saas-platform/nginx/default.conf
@@ -6,6 +6,11 @@ server {
         proxy_pass http://wp_tenant1;
         proxy_set_header Host $host;
     }
+
+    location /stub_status {
+        stub_status;
+        allow all;
+    }
 }
 
 server {
@@ -19,25 +24,6 @@ server {
 
     location /stub_status {
         stub_status;
-        allow 127.0.0.1;
         allow all;
     }
 }
-
-# server {
-#     listen 80;
-#     server_name grafana.local;
-
-#     location / {
-#         proxy_pass http://grafana:3000;
-#     }
-# }
-
-# server {
-#     listen 80;
-#     server_name prometheus.local;
-
-#     location / {
-#         proxy_pass http://prometheus:9090;
-#     }
-# }
