--- a/wp-saas-platform/nginx/default.conf
+++ b/wp-saas-platform/nginx/default.conf
@@ -1,3 +1,21 @@
+# ===========================
+# 🔹 Global NGINX metrics
+# ===========================
+server {
+    listen 80;
+    server_name _;
+
+    location /stub_status {
+        stub_status;
+        allow 172.16.0.0/12;   # Docker network
+        allow 127.0.0.1;
+        deny all;
+    }
+}
+
+# ===========================
+# 🔹 Tenant 1
+# ===========================
 server {
     listen 80;
     server_name tenant1.madsavanna.store;
@@ -5,14 +23,13 @@ server {
     location / {
         proxy_pass http://wp_tenant1;
         proxy_set_header Host $host;
-    }
-
-    location /stub_status {
-        stub_status;
-        allow all;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
+# ===========================
+# 🔹 Tenant 2
+# ===========================
 server {
     listen 80;
     server_name tenant2.madsavanna.store;
@@ -20,10 +37,6 @@ server {
     location / {
         proxy_pass http://wp_tenant2;
         proxy_set_header Host $host;
-    }
-
-    location /stub_status {
-        stub_status;
-        allow all;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
