--- a/wp-saas-platform/nginx/tenants.conf
+++ b/wp-saas-platform/nginx/tenants.conf
@@ -5,6 +5,7 @@ server {
     location / {
         proxy_pass http://wp_tenant1;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
@@ -15,5 +16,6 @@ server {
     location / {
         proxy_pass http://wp_tenant2;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
