--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -89,9 +89,7 @@ services:
   nginx-exporter:
     image: bitnami/nginx-exporter
     environment:
-      - NGINX_HOST=nginx
-      - NGINX_PORT=80
-      - NGINX_STATUS_PATH=/stub_status
+      - NGINX_STATUS_URI=http://nginx/stub_status
     ports:
       - "9113:9113"
     depends_on:
