--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -94,11 +94,10 @@ services:
       - "9113:9113"
     depends_on:
       - nginx
-
   mysql-exporter-tenant1:
     image: prom/mysqld-exporter
     environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant1:3306)/
+      DATA_SOURCE_NAME: "exporter:exporterpass@(db_tenant1:3306)/"
     ports:
       - "9104:9104"
     depends_on:
@@ -107,11 +106,13 @@ services:
   mysql-exporter-tenant2:
     image: prom/mysqld-exporter
     environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant2:3306)/
+      DATA_SOURCE_NAME: "exporter:exporterpass@(db_tenant2:3306)/"
     ports:
       - "9105:9104"
     depends_on:
       - db_tenant2
+
+
 
 
 volumes:
