--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -97,7 +97,7 @@ services:
   mysql-exporter-tenant1:
     image: prom/mysqld-exporter
     environment:
-      DATA_SOURCE_NAME: "exporter:exporterpass@(db_tenant1:3306)/"
+      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant1:3306)/
     ports:
       - "9104:9104"
     depends_on:
@@ -106,11 +106,12 @@ services:
   mysql-exporter-tenant2:
     image: prom/mysqld-exporter
     environment:
-      DATA_SOURCE_NAME: "exporter:exporterpass@(db_tenant2:3306)/"
+      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant2:3306)/
     ports:
       - "9105:9104"
     depends_on:
       - db_tenant2
+
 
 
 
