--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -84,37 +84,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   # ===========================
-  # NGINX Exporter
+  # cAdvisor (Container Metrics)
   # ===========================
-  nginx-exporter:
-    image: bitnami/nginx-exporter
-    environment:
-      - NGINX_STATUS_URI=http://nginx/stub_status
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.49.1
     ports:
-      - "9113:9113"
-    depends_on:
-      - nginx
-  mysql-exporter-tenant1:
-    image: prom/mysqld-exporter
-    environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant1:3306)/
-    ports:
-      - "9104:9104"
-    depends_on:
-      - db_tenant1
-
-  mysql-exporter-tenant2:
-    image: prom/mysqld-exporter
-    environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant2:3306)/
-    ports:
-      - "9105:9104"
-    depends_on:
-      - db_tenant2
-
-
-
-
+      - "8081:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
 
 volumes:
   db_tenant1:
