--- a/wp-saas-platform/monitoring/prometheus.yml
+++ b/wp-saas-platform/monitoring/prometheus.yml
@@ -6,6 +6,6 @@ scrape_configs:
     static_configs:
       - targets: ["prometheus:9090"]
 
-  - job_name: "nginx"
+  - job_name: "docker"
     static_configs:
-      - targets: ["nginx-exporter:9113"]
+      - targets: ["cadvisor:8080"]
