--- a/wp-saas-platform/monitoring/prometheus.yml
+++ b/wp-saas-platform/monitoring/prometheus.yml
@@ -6,6 +6,10 @@ scrape_configs:
     static_configs:
       - targets: ["prometheus:9090"]
 
-  - job_name: "docker"
+  - job_name: "nginx"
+    static_configs:
+      - targets: ["nginx-exporter:9113"]
+
+  - job_name: "cadvisor"
     static_configs:
       - targets: ["cadvisor:8080"]
