--- a/wp-saas-platform/monitoring/prometheus.yml
+++ b/wp-saas-platform/monitoring/prometheus.yml
@@ -2,14 +2,28 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
+
+  # Prometheus itself
   - job_name: "prometheus"
     static_configs:
       - targets: ["prometheus:9090"]
 
+  # Docker / cAdvisor
+  - job_name: "docker"
+    static_configs:
+      - targets: ["cadvisor:8080"]
+
+  # NGINX exporter
   - job_name: "nginx"
     static_configs:
       - targets: ["nginx-exporter:9113"]
 
-  - job_name: "cadvisor"
+  # MySQL tenant 1
+  - job_name: "mysql-tenant1"
     static_configs:
-      - targets: ["cadvisor:8080"]
+      - targets: ["mysql-exporter-tenant1:9104"]
+
+  # MySQL tenant 2
+  - job_name: "mysql-tenant2"
+    static_configs:
+      - targets: ["mysql-exporter-tenant2:9104"]
