--- a/wp-saas-platform/docker-compose.yml
+++ b/wp-saas-platform/docker-compose.yml
@@ -86,20 +86,17 @@ services:
   mysql-exporter-tenant1:
     image: prom/mysqld-exporter
     environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant1:3306)/
-    ports:
-      - "9104:9104"
+      - DATA_SOURCE_NAME=root:${MYSQL_ROOT_PASSWORD}@(db_tenant1:3306)/
     depends_on:
       - db_tenant1
 
   mysql-exporter-tenant2:
     image: prom/mysqld-exporter
     environment:
-      - DATA_SOURCE_NAME=exporter:exporterpass@(db_tenant2:3306)/
-    ports:
-      - "9105:9104"
+      - DATA_SOURCE_NAME=root:${MYSQL_ROOT_PASSWORD}@(db_tenant2:3306)/
     depends_on:
       - db_tenant2
+
 
 
   # ===========================
